<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mainviewandroid="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#000000">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:fillViewport="false">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:id="@+id/linearLayout"
            android:background="#212121"
            android:padding="14dp">

            <TextView
                android:layout_width="396dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:textColor="#ffffff"
                android:background="#ffffff"
                android:layout_gravity="right"
                android:height="1px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/room"
                android:id="@+id/textView5"
                android:textColor="#ffffff"
                android:textIsSelectable="false"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_marginTop="18dp" />

            <TextView
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/temperatureUnit"
            android:id="@+id/textView2"
            android:textSize="17sp"
            android:textColor="#ffffff"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tempValue"
                android:id="@+id/Temperature"
                android:textSize="75sp"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_min="16"
                app:dsb_max="30"
                android:id="@+id/SeekbarTemp"
                app:dsb_indicatorColor="#ff6403"
                app:dsb_trackColor="#ff8e3c"
                app:dsb_progressColor="#ff6403" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lumTitle"
                android:id="@+id/textView3"
                android:textSize="17sp"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/LumValue"
                android:id="@+id/Luminosity"
                android:textSize="75sp"
                android:textColor="#003737"
                android:layout_gravity="center_horizontal" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_min="0"
                app:dsb_max="100"
                app:dsb_indicatorColor="#00cccc"
                app:dsb_trackColor="#00bbbb"
                app:dsb_progressColor="#008C8C"
                android:id="@+id/SeekbarLum"
                android:layout_marginBottom="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:id="@+id/textView4"
                android:textColor="#ffffff"
                android:background="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/ActualConditionTitle"
                android:id="@+id/textView6"
                android:textSize="35sp"
                android:textColor="#ffffff"
                android:layout_marginTop="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/LocationValue"
                android:id="@+id/locationCity"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:layout_weight="0.51"
                android:layout_marginTop="5dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/TempOutsideTitle"
                android:id="@+id/textView8"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:layout_weight="0.51"
                android:layout_marginTop="6dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/TempOutsideValue"
                android:id="@+id/currentTemp"
                android:textSize="75sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="0dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/LumOutsideTitle"
                android:id="@+id/textView7"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:layout_weight="0.51" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/LumOutsideValue"
                android:id="@+id/uvLevel"
                android:textSize="75sp"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/currCondtions"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:layout_weight="0.51"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-8dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>